# janus-completo

./: .editorconfig  .env  .env.example  .env.pc1.example  .env.pc2.example  .env.portainer-16gb.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTONOMY_RISK.md  BACKEND_RUNTIME.md  CHANGELOG.md  CODEBASE_MAP.md  CONTRIBUTING.md  Dockerfile  FRONTEND_ANGULAR.md  Makefile  Melhorias possiveis.md  OPS_QA.md  PROJECT_MEMORY_INDEX.md  README.md  ROADMAP.md  TAILSCALE_SERVE_README.md  api_inventory.json  api_test_results.json  bandit_report.txt  bandit_results.json  coverage.json  docker-compose.pc1.tuning.yml  docker-compose.pc1.yml  docker-compose.pc2.yml  docker-compose.portainer-16gb.inline.yml  docker-compose.portainer-16gb.yml  docker-compose.yml  erros conhecidos.txt  erros-conhecidos.txt  frontend-audit.json  frontend_audit.txt  init-ollama.sh  melhorias-possiveis.md  (+18 more)
backend/: .dockerignore  README.md  debug_ds.py  generate_spec.py  openapi.json  pyproject.toml  pytest_final.txt  pytest_final2.txt  pytest_output.txt  requirements.txt  test_benchmark.py  windows_agent.py
backend/app/: .env.example  config.py  main.py
backend/app/api/: exception_handlers.py
backend/app/core/: bootstrap.py  kernel.py  kernel_health.py  protocols.py
backend/app/db/: graph.py  postgres_config.py  sync_events.py  vector_store.py
backend/app/models/: __init__.py  ab_experiment_models.py  audit_ledger_models.py  autonomy_models.py  config_models.py  consent_scopes.py  data_governance_models.py  document_models.py  knowledge_space_models.py  outbox_models.py  pending_action_models.py  schemas.py  tool_usage_models.py  user_models.py
backend/app/planes/: __init__.py
backend/app/prompts/: PROMPT_REGISTRY.md  agent_coder.txt  agent_optimizer.txt  agent_sysadmin.txt  autonomy_plan_draft.txt  autonomy_replanner.txt  capability_chain_of_thought.txt  code_agent_task.txt  context_compressed_conversation_section.txt  context_compression.txt  context_memories_section.txt  error_recovery.txt  evolution_tool_specification.txt  knowledge_extraction.txt  memory_integration.txt  meta_agent_planning.txt  system_identity.txt  system_identity_enforcement.txt  task_code_review_protocol.txt  task_question_protocol.txt  task_script_generation_protocol.txt  tool_generation.txt
backend/app/repositories/: ab_experiment_repository.py  agent_repository.py  audit_ledger_repository.py  autonomy_admin_repository.py  autonomy_goal_repository.py  autonomy_lock_repository.py  autonomy_repository.py  chat_repository.py  chat_repository_sql.py  collaboration_repository.py  consent_repository.py  context_repository.py  data_governance_repository.py  deployment_repository.py  document_manifest_repository.py  knowledge_repository.py  knowledge_space_repository.py  learning_repository.py  llm_repository.py  memory_repository.py  observability_repository.py  optimization_repository.py  outbox_repository.py  pending_action_repository.py  prompt_repository.py  (+3 more)
backend/config/: .env.mac.optimized  .env.optimized
backend/docker/: Dockerfile  README.md
backend/docs/: RAG_HYDE.md
backend/http/: E2E-Production-Scenario.http  MetaAgent.http  Workers.http  auto-analysis-test.http
backend/observability/: promtail-config.yaml
backend/prometheus/: prometheus.yml
backend/scripts/: benchmark_complex_process.py  build_experimental_retrieval_index.py  check_prompt_db.py  cleanup_graph_synonyms.py  data_plane_backup_restore.py  eval_technical_qa.py  eval_turboquant_retrieval.py  fix_prompt_languages.py  init-ollama.sh  neo4j_noise_maintenance.py  sanitize_qdrant_memory.py  seed_graph.py  seed_repro_scenarios.py  sync_prompts.py  test_grok_internal.py  test_tool_evolution_chat.py  update_meta_agent_prompts.py  validate_rag_hyde.py  verify_arch_knowledge.py
backend/tests/: chaos_harness.py  test_llm_router.py  test_voice_circuit_breaker.py  test_voice_manager.py  test_watchdog.py  verify_data_delete.py  verify_reasoning.py  verify_secret_management.py  verify_semantic_commits.py  verify_stateful_workers.py  verify_thinker.py
janus/: .dockerignore  README.md  benchmark_tokens.py  check_qdrant.py  debug_chat.py  debug_chat_v2.py  debug_ds.py  debug_full.py  debug_multi_agent.py  manual_test_browser.py  pyproject.toml  requirements.txt  simulation.py  start_agent.bat  test_benchmark.py  test_circuit_breaker.py  test_correcoes_docker.py  test_correcoes_simples.py  verify_blocking_io.py  windows_agent.py
janus/app/: config.py  fetch_gemini_quotas.py  main.py  manual_quota_update.py  verification_script.py  verify_docker.py  verify_hybrid.py
janus/config/: .env.optimized
janus/docker/: Dockerfile  ollama.Dockerfile
janus/docs/: qdrant_resilience_improvements.md
janus/http/: Collaboration.http  E2E-Production-Scenario.http  Knowledge.http  MetaAgent.http  Sprint Reforco.http  Workers.http  auto-analysis-test.http
janus/observability/: docker-compose.observability.yml  otel-collector.yaml  promtail-config.yaml
janus/otel/: otel-collector-config.yaml
janus/prometheus/: prometheus.yml
janus/scripts/: benchmark_complex_process.py  benchmark_prompt_tokens.py  check_history.py  eval_technical_qa.py  fix_prompt_languages.py  init-ollama.sh  init_postgres_db.py  migrate_prompts_from_files.py  setup-ollama-optimized-windows.ps1  setup-ollama-optimized.sh  setup-ollama-windows-simple.ps1  sync_prompts.py  test_chat_backend.py  test_evolution.py  test_grok_internal.py  test_meta_cycle_internal.py  validate_rag_hyde.py  verify_postgres.py  verify_prompts.py  vram_stress_test.py
janus/sql/: 001_create_prompts_table.sql  002_seed_evolution_prompts.sql  003_full_tool_specification_prompt.sql
janus/tests/: chaos_harness.py  test_llm_router.py  test_voice_circuit_breaker.py  test_voice_manager.py  test_wakeword_service.py  test_watchdog.py  verify_budget_guardrails.py  verify_data_delete.py  verify_distillation.py  verify_r1_integration.py  verify_reasoning.py  verify_red_team.py  verify_secret_management.py  verify_self_healing_and_rag.py  verify_semantic_commits.py  verify_stateful_workers.py  verify_thinker.py
(+2719 files in other folders)
