[tool.poetry]
name = "janus-api"
version = "0.1.0"
description = "Janus Agentic System API"
authors = ["arthur.paraiso.mar@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = "*"
neo4j = ">=5.19.0"
qdrant-client = "1.9.2"
langchain = ">=0.1.20"
langchain-openai = ">=0.1.6"
langsmith = ">=0.1.57,<0.2.0"
langchain-community = "*"
langchain-neo4j = ">=0.0.3"
langchain-google-genai = ">=0.1.0"
langchain-groq = "*"
langchain-ollama = "*"
onnxruntime = "*"
sentence-transformers = "*"
transformers = ">=4.36.0,<4.50.0"
structlog = "*"
prometheus-fastapi-instrumentator = "*"
epicbox = "*"
aio-pika = ">=9.0.0"
pika = ">=1.3.0"
tavily-python = ">=0.3.0"
RestrictedPython = ">=6.0"
psutil = ">=5.9.0"
prometheus-client = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
