[tool.poetry]
name = "janus-api"
version = "0.1.0"
description = "Janus Agentic System API"
authors = ["arthur.paraiso.mar@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = "*"

# Databases / Storage
neo4j = ">=5.19.0"
qdrant-client = ">=1.9.2"

# LangChain ecosystem
langchain = ">=0.1.20"
langchain-openai = ">=0.1.6"
langsmith = ">=0.1.57,<0.2.0"
langchain-community = "*"
langchain-neo4j = ">=0.0.3"
langchain-google-genai = ">=0.1.0"
langchain-groq = "*"
langchain-ollama = "*"

# Observability
structlog = "*"
prometheus-fastapi-instrumentator = "*"
prometheus-client = "*"
psutil = ">=5.9.0"

# Message Broker (RabbitMQ)
aio-pika = ">=9.0.0"
pika = ">=1.3.0"

# Web Search & Context
tavily-python = ">=0.3.0"

# Python Sandbox
RestrictedPython = ">=6.0"

# Embeddings / ML
sentence-transformers = ">=2.2.2"
transformers = ">=4.36.0,<4.50.0"
onnxruntime = ">=1.17.0"
numpy = ">=1.26.0"

# Security
cryptography = ">=41.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
