[tool.poetry]
name = "janus-api"
version = "0.5.44"
description = "Janus Agentic System API"
authors = ["arthur.paraiso.mar@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = "*"
python-multipart = "0.0.26"

# Databases / Storage
neo4j = ">=5.19.0"
qdrant-client = ">=1.9.2"
redis = ">=5.0.0"

# LangChain ecosystem
langchain = "1.2.10"
langchain-openai = "1.1.10"
langsmith = ">=0.7.31,<1.0.0"
langchain-community = "0.4.1"
langchain-core = "1.2.28"
langgraph = "1.0.10"
langgraph-checkpoint-postgres = "3.0.4"
neo4j-graphrag = "*"
langchain-google-genai = "4.2.1"
langchain-groq = "1.1.2"
langchain-ollama = "1.0.1"

# Observability
structlog = "*"
prometheus-fastapi-instrumentator = "*"
prometheus-client = "*"
psutil = ">=5.9.0"
google-cloud-monitoring = "^2.19.0"

# Message Broker (RabbitMQ)
aio-pika = ">=9.0.0"
pika = ">=1.3.0"

# Web Search & Context
tavily-python = ">=0.3.0"

# Python Sandbox
RestrictedPython = ">=6.0"

# Embeddings / ML
sentence-transformers = ">=3.0.0"
# Elevado mínimo para incorporar correções de ReDoS do HF Transformers
transformers = ">=5.0.0rc3"
onnxruntime = ">=1.17.0"
numpy = ">=1.26.0,<2.0.0"

# Security
cryptography = "46.0.7"
psycopg2-binary = "*"
asyncpg = "0.31.0"
psycopg = { extras = ["binary"], version = "*" }
pgvector = "*"
sqlalchemy = ">=2.0.0"
docker = ">=6.1.0"
msgpack = ">=1.0.7"

# Voice / Audio
SpeechRecognition = "^3.10.0"
edge-tts = "^6.1.0"
pyaudio = "*" # Now supported via Dockerfile additions (portaudio19-dev)
pyttsx3 = "^2.90"
openwakeword = "^0.5.1"
scipy = "^1.11.0"

firebase-admin = "^6.5.0"
langchain-text-splitters = "1.0.0"
protobuf = "6.33.5"
pyasn1 = "0.6.3"
pypdf = "6.10.2"
pydantic-ai-slim = {version = "1.56.0", extras = ["google", "groq", "openai", "retries"]}
langgraph-checkpoint = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^0.23.0"
pytest-cov = "^7.1.0"
mypy = "^1.8.0"
ruff = "^0.1.0"
black = "^26.3.1"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]
