[tool.poetry]
name = "janus-api"
version = "0.4.30"
description = "Janus Agentic System API"
authors = ["arthur.paraiso.mar@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = "*"
python-multipart = "*"

# Databases / Storage
neo4j = ">=5.19.0"
qdrant-client = ">=1.9.2"

# LangChain ecosystem
langchain = ">=0.1.20"
langchain-openai = ">=0.1.6"
langsmith = ">=0.1.57,<0.2.0"
langchain-community = "*"
langchain-core = "*"
langgraph = "*"
langgraph-checkpoint-sqlite = "*"
aiosqlite = "*"
langchain-neo4j = ">=0.0.3"
langchain-google-genai = ">=0.1.0"
langchain-groq = "*"
langchain-ollama = "*"

# Observability
structlog = "*"
prometheus-fastapi-instrumentator = "*"
prometheus-client = "*"
psutil = ">=5.9.0"
google-cloud-monitoring = "^2.19.0"

# Message Broker (RabbitMQ)
aio-pika = ">=9.0.0"
pika = ">=1.3.0"

# Web Search & Context
tavily-python = ">=0.3.0"

# Python Sandbox
RestrictedPython = ">=6.0"

# Embeddings / ML
sentence-transformers = ">=3.0.0"
# Elevado mínimo para incorporar correções de ReDoS do HF Transformers
transformers = ">=4.48.0"
onnxruntime = ">=1.17.0"
numpy = ">=1.26.0,<2.0.0"

# Security
cryptography = ">=41.0.0"
pymysql = "*"
sqlalchemy = ">=2.0.0"
docker = ">=6.1.0"
msgpack = ">=1.0.7"

# Voice / Audio
SpeechRecognition = "^3.10.0"
edge-tts = "^6.1.0"
pyaudio = "*" # Now supported via Dockerfile additions (portaudio19-dev)
pyttsx3 = "^2.90"
openwakeword = "^0.5.1"
scipy = "^1.11.0"

firebase-admin = "^6.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
ruff = "^0.1.0"
black = "^24.0.0"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]
